Contact fix on iPhone SE

--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,7 @@ html {
 
 	.links_container li {
 		display: inline-block;
-		margin: 0 20px 0 0;
+		margin: 0 18px 0 0;
 		-webkit-transition: 0.1s ease-out;
 		-moz-transition: 0.1s ease-out;
 		-ms-transition: 0.1s ease-out;
@@ -583,7 +583,7 @@ html {
 	}
 
 	.contact_container .button {
-		width: 80%;
+		width: 100%;
 	}
 
 	.contact_container_social {
@@ -692,6 +692,10 @@ html {
 
 	.contact_container {
 		padding: 120px 10% 120px 10%;
+	}
+
+	.contact_container .button {
+		width: 80%;
 	}
 }
 
